force-app/main/default/objects/HP_Souscription__c/fields/reductionAbonnementElec__c.field-meta.xml
<CustomField>
    <fullName>reductionAbonnementElec__c</fullName>
    <formula>TEXT( reduction_abo_elec__c ) +&quot;%&quot;</formula>
    <label>Réduction abonnement Electricité</label>
    <type>Text</type>
</CustomField>