force-app/main/default/objects/HP_Souscription__c/fields/reductionAbonnementGaz__c.field-meta.xml
<CustomField>
    <fullName>reductionAbonnementGaz__c</fullName>
    <formula>TEXT( reduction_abo_gaz__c ) +&quot;%&quot;</formula>
    <label>Réduction abonnement Gaz</label>
    <type>Text</type>
</CustomField>