force-app/main/default/objects/HP_Souscription__c/fields/reductionConsommationAnnee1Electricite__c.field-meta.xml
<CustomField>
    <fullName>reductionConsommationAnnee1Electricite__c</fullName>
    <formula>TEXT( reduction_a1_elec__c ) +&quot;%&quot;</formula>
    <label>Réduction Consommation Année 1 Elec</label>
    <type>Text</type>
</CustomField>