force-app/main/default/objects/HP_Souscription__c/fields/reductionConsommationAnnee1Gaz__c.field-meta.xml
<CustomField>
    <fullName>reductionConsommationAnnee1Gaz__c</fullName>
    <formula>TEXT( reduction_a1_gaz__c ) +&quot;%&quot;</formula>
    <label>Réduction Consommation Année 1 Gaz</label>
    <type>Text</type>
</CustomField>