force-app/main/default/objects/HP_Souscription__c/fields/reductionConsommationAnnee2Gaz__c.field-meta.xml
<CustomField>
    <fullName>reductionConsommationAnnee2Gaz__c</fullName>
    <formula>TEXT( reduction_a2_gaz__c ) +&quot;%&quot;</formula>
    <label>Réduction Consommation Année 2 Gaz</label>
    <type>Text</type>
</CustomField>