force-app/main/default/objects/HP_Souscription__c/validationRules/HP_VR002_AnnulerSouscription.validationRule-meta.xml
<ValidationRule>
    <fullName>HP_VR002_AnnulerSouscription</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.ByPassSettings__c.ValidationRule__c,
ISCHANGED(HP_Statut__c),
OR($UserRole.DeveloperName =
&quot;HP_Conseiller_Niveau_1&quot;,$UserRole.DeveloperName =
&quot;HP_Conseiller_Niveau_2&quot;, $UserRole.DeveloperName =
&quot;HP_Conseiller_Niveau_1_TAD&quot;, $UserRole.DeveloperName =
&quot;HP_Conseiller_Niveau_2_TAD&quot;),
ISPICKVAL( HP_Statut__c, &quot;CANCEL&quot;),
ISBLANK( TEXT(HP_RaisonAnnulation__c)))</errorConditionFormula>
    <errorMessage>la raison de l&apos;annulation est obligatoire.</errorMessage>
</ValidationRule>