force-app/main/default/objects/HP_Souscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>HP_Canal_de_vente__c</columns>
    <columns>HP_Contact__c</columns>
    <columns>HP_NumPDL__c</columns>
    <columns>HP_NumberPCE__c</columns>
    <columns>HP_Porte_Feuille_Contrat__c</columns>
    <columns>HP_Souscription_Digital_Id__c</columns>
    <columns>HP_Statut__c</columns>
    <columns>Client__c</columns>
    <columns>HP_Nom_Contractant__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les souscriptions</label>
</ListView>