force-app/main/default/objects/HP_Souscription__c/listViews/HP_All.listView-meta.xml
<ListView>
    <fullName>HP_All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>HP_Canal_de_vente__c</columns>
    <columns>HP_Contact__c</columns>
    <columns>HP_type_Souscription__c</columns>
    <columns>HP_Type_Energie__c</columns>
    <columns>HP_NumPDL__c</columns>
    <columns>HP_NumberPCE__c</columns>
    <columns>HP_Porte_Feuille_Contrat__c</columns>
    <columns>HP_Souscription_Digital_Id__c</columns>
    <columns>HP_Statut__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les souscriptions</label>
    <sharedTo>
        <roleAndSubordinatesInternal>HP_HAPPE</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>