force-app/main/default/objects/HP_Souscription__c/listViews/HP_happ_e_relance_CPV_non_sign_es.listView-meta.xml
<ListView>
    <fullName>HP_happ_e_relance_CPV_non_sign_es</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>HP_Canal_de_vente__c</columns>
    <columns>HP_Contact__c</columns>
    <columns>HP_NumPDL__c</columns>
    <columns>HP_NumberPCE__c</columns>
    <columns>HP_Porte_Feuille_Contrat__c</columns>
    <columns>HP_Souscription_Digital_Id__c</columns>
    <columns>HP_Statut__c</columns>
    <columns>HP_Client__c</columns>
    <columns>HP_Predecesseur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HP_Statut__c</field>
        <operation>equals</operation>
        <value>SAVE_2_CONFIRMED</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>happ-e : relance CPV non signées</label>
    <sharedTo>
        <roleAndSubordinatesInternal>HP_HAPPE</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>