force-app/main/default/objects/HP_Souscription__c/listViews/HP_Rappel_Lead_non_convertis.listView-meta.xml
<ListView>
    <fullName>HP_Rappel_Lead_non_convertis</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>HP_Canal_de_vente__c</columns>
    <columns>HP_Contact__c</columns>
    <columns>HP_NumPDL__c</columns>
    <columns>HP_NumberPCE__c</columns>
    <columns>HP_Nom_de_ville__c</columns>
    <columns>HP_DigitalDateSave2__c</columns>
    <columns>HP_Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HP_Statut__c</field>
        <operation>equals</operation>
        <value>SAVE_2_CONFIRMED</value>
    </filters>
    <label>Rappel Lead non convertis</label>
    <sharedTo>
        <roleAndSubordinates>HP_HAPPE</roleAndSubordinates>
    </sharedTo>
</ListView>