force-app/main/default/objects/HP_Souscription__c/listViews/HP_Save2_NonSigne.listView-meta.xml
<ListView>
    <fullName>HP_Save2_NonSigne</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>HP_Canal_de_vente__c</columns>
    <columns>HP_Contact__c</columns>
    <columns>HP_type_Souscription__c</columns>
    <columns>HP_Type_Energie__c</columns>
    <columns>HP_NumPDL__c</columns>
    <columns>HP_NumberPCE__c</columns>
    <columns>HP_Porte_Feuille_Contrat__c</columns>
    <columns>HP_Souscription_Digital_Id__c</columns>
    <columns>HP_Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HP_Statut__c</field>
        <operation>equals</operation>
        <value>SAVE_2_CONFIRMED</value>
    </filters>
    <label>CPV non signées (save 2)</label>
    <sharedTo>
        <roleAndSubordinatesInternal>HP_HAPPE</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>