force-app/main/default/objects/HP_Souscription__c/listViews/HP_Toutes_les_souscriptions_30_derniers_J.listView-meta.xml
<ListView>
    <fullName>HP_Toutes_les_souscriptions_30_derniers_J</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>HP_Canal_de_vente__c</columns>
    <columns>HP_Contact__c</columns>
    <columns>HP_type_Souscription__c</columns>
    <columns>HP_Type_Energie__c</columns>
    <columns>HP_NumPDL__c</columns>
    <columns>HP_NumberPCE__c</columns>
    <columns>HP_OptionVert__c</columns>
    <columns>HP_Souscription_Digital_Id__c</columns>
    <columns>HP_Statut__c</columns>
    <columns>HP_DigitalLogin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HP_Date_Origine__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Toutes les souscriptions (30 derniers J)</label>
    <sharedTo>
        <roleAndSubordinates>HP_HAPPE</roleAndSubordinates>
    </sharedTo>
</ListView>